Исправил по замечаниям + тесты